intergrated both scripts into one

--- a/Rbac/toDo.txt
+++ b/Rbac/toDo.txt
@@ -3,8 +3,8 @@
 [X]Import data
 [X]Code block to replace the data in RoleDefId
 [X]Code block to create new Column RowNo
-[]Iterate block to loop and assign RBACs
-[]Test Code
-[]Conclude
+[X]Iterate block to loop and assign RBACs
+[X]Test Code
+[X]Conclude
 
 102 characters in row definition id valur to be deleted
