--- a/Rbac/toDo.txt
+++ b/Rbac/toDo.txt
@@ -3,8 +3,7 @@
 [X]Import data
 [X]Code block to replace the data in RoleDefId
 [X]Code block to create new Column RowNo
+[X]102 characters in each RowDefinitionId value in each row to be deleted.
 [X]Iterate block to loop and assign RBACs
 [X]Test Code
 [X]Conclude
-
-# 102 characters in row definition id value to be deleted
